--- a/about.html
+++ b/about.html
@@ -115,127 +115,20 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/anshuman.jpg" alt="" class="team-image">
+                <img src="assets/images/aaryav.jpeg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="https://www.facebook.com/anshuman.verma.313371/"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="https://www.instagram.com/q_halbleiter_3371/"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="https://www.linkedin.com/in/anshumanverma1807/"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://twitter.com/AaryavMishra"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="https://www.instagram.com/err_yav/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/aaryav-mishra-bb176a20a/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
               </div>
               <div class="down-content">
-                <h4>Anshuman Verma</h4>
-                <span>Secretary</span>
-              </div>
-            </div>
-          </div>
-          
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/sahil.jpeg" alt="" class="team-image">
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li><a href="https://www.facebook.com/sahil.jangir.50115/"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="https://www.instagram.com/skj_sahil/"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="https://www.linkedin.com/in/sahil-kumar-jangir-373b231ab"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Sahil Jangir</h4>
-                <span>Joint Secretary</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/b.jpeg" alt="" class="team-image">
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li><a href="https://sbalan7.github.io/"><i class="fa fa-globe"></i></a></li>
-                      <li><a href="https://github.com/sbalan7"><i class="fa fa-github"></i></a></li>
-                      <li><a href="https://www.instagram.com/balance_to_the_force/"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="https://www.linkedin.com/in/sbalan7/"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Shanmugha Balan</h4>
-                <span>Chief Editor</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/abhijit.jpg" alt="" class="team-image">
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li><a href="https://twitter.com/Abhijit99789986"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="https://instagram.com/abhijith4ever"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="https://www.linkedin.com/in/abhijith4ever/"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="https://github.com/kannanabhi"><i class="fa fa-github"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Abhijit MB</h4>
-                <span>APOGEE Coordinator</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/vatsal.jpg" alt="" class="team-image">
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li><a href="https://www.facebook.com/vatsal.pattani.35"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="https://www.instagram.com/vatsal_pattani/"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="https://www.linkedin.com/in/vatsal-pattani-8a4682198"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Vatsal Pattani</h4>
-                <span>Joint APOGEE Coordinator</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/nehil.jpg" alt="" class="team-image">
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li><a href="https://www.facebook.com/alter.singh.1422"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="https://instagram.com/nehil623"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="https://www.linkedin.com/in/nehil-singh-8701b9210"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Nehil Singh</h4>
-                <span>Joint Apogee Coordinator</span>
+                <h4>Aaryav Mishra</h4>
+                <span>President</span>
               </div>
             </div>
           </div>
@@ -263,6 +156,67 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
+                <img src="assets/images/sahil.jpeg" alt="" class="team-image">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="https://www.facebook.com/sahil.jangir.50115/"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://www.instagram.com/skj_sahil/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/sahil-kumar-jangir-373b231ab"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Prakhar Pandey</h4>
+                <span>Secretary</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
+                <img src="assets/images/abhinav.jpg" alt="" class="team-image">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="https://www.facebook.com/Abhinav.Choudhary.1234"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://www.instagram.com/_chacha_choudhary_/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/abhinav-choudhary-115a841b8/"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://github.com/aksh2001"><i class="fa fa-github"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Abhinav Choudhary</h4>
+                <span>Chief Editor</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
+                <img src="assets/images/nehil.jpg" alt="" class="team-image">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="https://www.facebook.com/alter.singh.1422"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://instagram.com/nehil623"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/nehil-singh-8701b9210"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Nehil Singh</h4>
+                <span>Joint Apogee Coordinator</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
                 <img src="assets/images/taha.jpeg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
@@ -279,7 +233,6 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
             </div>
           </div>
-
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
@@ -342,29 +295,6 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
             </div>
           </div>
-
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/abhinav.jpg" alt="" class="team-image">
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li><a href="https://www.facebook.com/Abhinav.Choudhary.1234"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="https://www.instagram.com/_chacha_choudhary_/"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="https://www.linkedin.com/in/abhinav-choudhary-115a841b8/"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="https://github.com/aksh2001"><i class="fa fa-github"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Abhinav Choudhary</h4>
-                <span>Chief Editor</span>
-              </div>
-            </div>
-          </div>
-
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
@@ -386,26 +316,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             </div>
           </div>
 
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/aaryav.jpeg" alt="" class="team-image">
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li><a href="https://twitter.com/AaryavMishra"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="https://www.instagram.com/err_yav/"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="https://www.linkedin.com/in/aaryav-mishra-bb176a20a/"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Aaryav Mishra</h4>
-                <span>President</span>
-              </div>
-            </div>
-          </div>
+          
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
